Git Tests/force-app/main/default/default/objects/UsuariosCompartilhados__c/UsuariosCompartilhados__c.object-meta.xml
<CustomObject>
    <label>Usuários Compartilhados</label>
    <nameField>
        <label>Nome de Usuários Compartilhados</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuários Compartilhados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>