Git Tests/force-app/main/default/default/objects/UsuariosCompartilhados__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nota Fiscal</label>
    <referenceTo>NotasFiscais__c</referenceTo>
    <relationshipLabel>Usuários Compartilhados</relationshipLabel>
    <relationshipName>UsuariosCompartilhados</relationshipName>
    <type>Lookup</type>
</CustomField>