Git Tests/force-app/main/default/default/objects/UsuariosCompartilhados__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Usuários Compartilhados</relationshipLabel>
    <relationshipName>UsuariosCompartilhados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>